# GNU_Linux

./: README.md
01_BuildReq/: hello.c
03_TerminalProject/: Show.c
04_Text/: randomize.sh
06_TracingFencing/: Makefile  move.c  unlink_wrapper.c
07_Environmental/: CMakeLists.txt  clean.sh
07_Environmental/Source/: rhasher.c
07_Environmental/headers/: newline_read.h
07_Environmental/libs/: newline_read.c
07_Environmental/source/: rhasher.c
08_Regexps/: CMakeLists.txt  esub.c
